# Alchemy

./: .gitignore  CMake.gitignore  CMakeLists.txt  CommonLibraries.txt  Common_Cmake.txt  readme.md
Alchemy_Core/: CMakeLists.txt
Alchemy_Core/Source/Miscellaneous/: Types.h
Alchemy_Core/Source/Renderer/: Renderer.cpp  Renderer.h
Alchemy_Core/Source/Renderer/backends/: imgui_impl_sdlgpu.cpp
Alchemy_Core/Source/Window/: Window.cpp
Alchemy_Editor/: CMakeLists.txt
KitzuCore_Core/: CMakeLists.txt
KitzuCore_Core/Source/: KitzuCore.h  Logging.h
KitzuCore_Core/Source/Application/: Application.cpp  Application.h
KitzuCore_Core/Source/Context/: Context.cpp  Context.h
KitzuCore_Core/Source/ECS/Components/: InputComponent.h  LightComponent.cpp  LightComponent.h  MaterialComponent.h  MeshComponent.h
KitzuCore_Core/Source/ECS/Systems/: InputSystem.h  RenderBatcher.h
KitzuCore_Core/Source/Miscellaneous/: Assert.h  Types.h
KitzuCore_Core/Source/Renderer/: Renderer.cpp  Renderer.h
KitzuCore_Core/Source/Window/: Window.cpp  Window.h
KitzuCore_Core_Core/: CMakeLists.txt
KitzuCore_Core_Core/Source/: Alchemy.h
KitzuCore_Core_Core/Source/Renderer/backends/: imgui_impl_sdlgpu.h
KitzuCore_Core_Core/Source/Window/: Window.h
KitzuCore_Editor/: AssimpConfig.txt  CMakeLists.txt
KitzuCore_Editor/Source/: EditorApp.h  main.cpp
KitzuCore_Editor/Source/Context/: EditorContext.cpp  EditorContext.h
KitzuCore_Editor/Source/EditorRenderer/: EditorRenderer.cpp  EditorRenderer.h
KitzuCore_Editor/Source/UIStack/: UIElement.h  UILayer.h  UIStackManager.h
KitzuCore_Editor/Source/UIStack/Elements/: AssetView.h  TopMenuBar.h  Viewport.h
KitzuCore_Editor/Source/UIStack/Viewport/: Viewport.h
KitzuCore_Editor/Source/imgui/: imgui_impl_sdlgpu.cpp
Source/: Alchemy.h  main.cpp
Source/ECS/: Transform.h
Source/ECS/Rendering/: StaticMesh.h
Source/Math/: Float2.h  Float3.h  Float4.h  MatrixMath.h
Source/Miscellaneous/: Types.h
Source/Precompiled/: stdafx.h
Source/Renderer/: Renderer.cpp  Renderer.h
Source/Window/: Window.h
repo_data/: logo.psd
